--- a/section3/index.html
+++ b/section3/index.html
@@ -28,7 +28,7 @@
           <li>Sub item 1</li>
           <li>Sub item 2</li>
         </ul></li>
-      <li>Main item 2
+      <li>Main item 
         <ul>
           <li>Sub item 1</li>
           <li>Sub item 2</li>
